# fire_detection_ws

./: .gitignore
src/fire_detection_notifier/: package.xml  setup.cfg  setup.py
src/fire_detection_notifier/fire_detection_notifier/: DEMO.md  config.py  detect.py  detect_dual.py  fire_pub.py  mqtt_publisher.py
src/fire_detection_notifier/fire_detection_notifier/sub/: config.py  event_openai.py  mqtt_subscriber.py  sound_player.py  sub.py  warning.py
